fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ img {
 
 
 .quote {
-    background-image: url(./assets/quote-bg.png);
+    background-image: url(assets/quote-bg.png);
     background-repeat: no-repeat;
     background-color: #FFFFFF;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
